CSS - Reglas CSS - selector por etiqueta y por id

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <body>
         <header>
-            <h1>Curriculum Vitae - Javier Reyes</h1>
+            <h1 id="title">Curriculum Vitae - Javier Reyes</h1>
         </header>
         
         <nav>
-            <ul>
+            <ul id="links">
                 <li><a href="#secciondatos">Datos Personales</a></li>
                 <li><a href="#seccionredes">Redes Sociales</a></li>
                 <li><a href="#seccionhabilidades">Habilidades Profesionales</a></li>
