CSS - Selectores por clase y compuestos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
 
-        <section id="secciondatos">
+        <section id="secciondatos" class="seccion">
             <h2>Datos Personales</h2>
             <p>
                 ¡Hola! Soy Diego Javier Reyes Medranda, con experiencia en desarrollo web en front end y back end. Participo en todas las etapas del ciclo
@@ -33,7 +33,7 @@
             </p>
         </section>
 
-        <section id="seccionredes">
+        <section id="seccionredes" class="seccion">
             <h2>Redes Sociales</h2>
             <span>
                 <a href="https://www.linkedin.com/in/djreyesmed24">LinkedIn</a>
@@ -41,7 +41,7 @@
             </span>
         </section>
 
-        <section id="seccionhabilidades">
+        <section id="seccionhabilidades" class="seccion">
             <h2>Habilidades Profesionales</h2>
             <ul>
                 <li>HTML & CSS</li>
@@ -52,7 +52,7 @@
             </ul>
         </section>
 
-        <section id="seccionidiomas">
+        <section id="seccionidiomas" class="seccion">
             <h2>Idiomas</h2>
 
             <table>
@@ -82,7 +82,7 @@
             </table>
         </section>
 
-        <section id="secciontransversales">
+        <section id="secciontransversales" class="seccion">
             <h2>Contenidos Transversales</h2>
             
             <ol>
@@ -93,13 +93,13 @@
             </ol>
         </section>
 
-        <aside id="secciongaleria">
+        <aside id="secciongaleria" class="seccion">
             <h2>Galería</h2>
             <img alt="Reading" width="30%" src="public/images/reading.jpg">
             <img width="30%" src="https://cdn.pixabay.com/photo/2015/05/29/19/18/cafe-789635_960_720.jpg" alt="Foto de colaboración">    
         </aside>
 
-        <section id="seccioncontactenos">
+        <section id="seccioncontactenos" class="seccion">
             <h2>Contáctame</h2>
 
             <h3>Sus Datos</h3>
