Modificaciones adicionales para aplicar modelo de cajas (Grid y FlexBox)

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
         <aside id="secciongaleria" class="seccion">
             <h2>Galería</h2>
-            <img alt="Reading" width="30%" src="public/images/reading.jpg">
-            <img width="30%" src="https://cdn.pixabay.com/photo/2015/05/29/19/18/cafe-789635_960_720.jpg" alt="Foto de colaboración">    
+            <img alt="Reading" src="public/images/reading.jpg">
+            <img src="https://cdn.pixabay.com/photo/2015/05/29/19/18/cafe-789635_960_720.jpg" alt="Foto de colaboración">    
         </aside>
 
         <section id="seccioncontactenos" class="seccion">
@@ -162,7 +162,7 @@
             
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.023651929019!2d-79.972389911145!3d-2.1446260000000037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d7303bb0133cd%3A0x66c18bd9810f31cb!2sFacultad%20de%20Ingenier%C3%ADa%20en%20Electricidad%20y%20Computaci%C3%B3n%20FIEC%20-%20ESPOL!5e0!3m2!1ses!2sec!4v1729818325898!5m2!1ses!2sec"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             
             </div>
